test/compile_errors/err_unreachable_too_many_args.w
//! expect-check-fail: unreachable() expects zero or one message argument

fn main:
    unreachable("first", "second")
